Starting final corrections

--- a/latex/ch2.tex
+++ b/latex/ch2.tex
@@ -555,7 +555,7 @@ This same statement also applies to the NSGT, where different frequency bins hav
 	\label{fig:raggedslicqt}
 \end{figure}
 
-Note that to produce a meaningful spectrogram like the NSGT in Figure \ref{fig:raggedslicqt}, the slices returned by the sliCQT must be overlap-added as described in Section \ref{sec:theoryslicqt} and shown in \ref{fig:slicqoverlaps}. The NSGT outputs the meaningful spectrogram directly, without any further modifications needed.
+Note that to produce a meaningful spectrogram like the NSGT in Figure \ref{fig:raggedslicqt}, the slices returned by the sliCQT must be overlap-added as described in Section \ref{sec:theoryslicqt} and shown in Figure \ref{fig:slicqoverlaps}. The NSGT outputs the meaningful spectrogram directly, without any further modifications needed.
 
 \newpagefill
 
@@ -947,7 +947,7 @@ In the 2018 Signal Source Separation Evaluation Compaign (SiSEC), \textcite{sise
 
 Diverse music source separation algorithms based on spectrograms use the technique of time-frequency masking \parencite{musicsepgood, musicmask}. In this section, I will describe the concept of time-frequency masking, and oracle estimators, which can be used to compute the maximum possible quality of a given time-frequency mask from ground truth signals. Two different music source separation systems based on time-frequency masking will be described in upcoming sections: Harmonic/Percussive Source Separation \parencite{fitzgerald1}, a KAM (kernel additive modeling) algorithm for music source separation that will be presented in Section \ref{sec:hpss}, and Open-Unmix \parencite{umx}, a DNN (deep neural network) for music source separation that will be presented in Section \ref{sec:umx}.
 
-\textcite{masking} describe different time-frequency masking strategies in audio source separation. A time-frequency mask (or spectral mask, or masking filter) is a matrix of the same size as the complex STFT, or its real-valued magnitude, by which the STFT is multiplied to mask, filter, or suppress specific time-frequency bins. A soft mask, or ratio mask, has real values $\in [0.0, 1.0]$, and a binary mask, or hard mask, has logical values (i.e., only zero and one). To compute a binary mask, there must be an additional real-valued parameter, $\theta$, which is the separation factor; values below $\theta$ are set to 0, and values above $\theta$ are set to 1. According to \textcite{masking}, soft masks are generally produce a higher quality of sound. An illustration of spectral masking is shown in Figure \ref{fig:simplemasks}, and an example of soft and hard masking is shown in Figure \ref{fig:masks}.
+\textcite{masking} describe different time-frequency masking strategies in audio source separation. A time-frequency mask (or spectral mask, or masking filter) is a matrix of the same size as the complex STFT, or its real-valued magnitude, by which the STFT is multiplied to mask, filter, or suppress specific time-frequency bins. A soft mask, or ratio mask, has real values $\in [0.0, 1.0]$, and a binary mask, or hard mask, has logical values (i.e., only zero and one). To compute a binary mask, there must be an additional real-valued parameter, $\theta$, which is the separation factor; values below $\theta$ are set to 0, and values above $\theta$ are set to 1. According to \textcite{masking}, soft masks generally produce a higher quality of sound. An illustration of spectral masking is shown in Figure \ref{fig:simplemasks}, and an example of soft and hard masking is shown in Figure \ref{fig:masks}.
 
 \begin{figure}[ht]
        \centering
