--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -130,7 +130,7 @@ doi = {10.1121/1.5133944},
  title={Convex optimization},
  author={Boyd, Stephen and Vandenberghe, Lieven},
  year={2004},
- publisher={Cambridge university press},
+ publisher={Cambridge University Press},
 } 
 
 @article{musicsepgood,
@@ -455,7 +455,7 @@ doi = {10.1002/9781119279860.ch5},
 
 @article{umxorig2,
   title={Framewise phoneme classification with bidirectional LSTM and other neural network architectures},
-  author={A. Graves and J. Schmidhuber},
+  author={Graves, Alex and Schmidhuber, Jürgen},
   journal={Neural Networks},
   year={2005},
   volume={18},
@@ -464,8 +464,8 @@ doi = {10.1002/9781119279860.ch5},
 }
 
 @inproceedings{statisticalsp,
-  title={An introduction To statistical signal processing},
-  author={R. Gray and L. Davisson},
+  title={An introduction to statistical signal processing},
+  author={Gray, Robert M. and Davisson, Lee D.},
   year={2004},
   publisher={Cambridge University Press},
 }
@@ -532,7 +532,7 @@ journal = {Max-Planck-Institut f{\"u}r Gravitationsphysik}
 }
 
 @article{heisenberg1927,
-  author = {Heisenberg, W.},
+  author = {Heisenberg, Werner},
   journal = {Zeitschrift f\"{u}r Physik},
   pages = {879--893},
   title = {{\"{U}ber den anschaulichen inhalt der quantentheoretischen kinematik und mechanik}},
@@ -620,7 +620,7 @@ doi = {10.1016/S0893-6080(00)00026-5}
 author = {Iman, Mohammadreza and Arabnia, Hamid and Branchinst, Robert},
 year = {2020},
 title = {Pathways to artificial general intelligence: A brief overview of developments and ethical issues via artificial intelligence, machine learning, deep learning, and data science},
-booktitle = {The 22nd International Conference on Artificial Intelligence},
+booktitle = {Proceedings of the 22nd International Conference on Artificial Intelligence},
 }
 
 @article{westernpitch2,
@@ -858,7 +858,7 @@ doi = {10.1109/TASL.2013.2239989},
 
 @inproceedings{musicseptechniques1,
 author={Liutkus, Antoine and Durrieu, Jean-Louis and Daudet, Laurent and Richard, Gaël},
-booktitle={14th International Workshop on Image Analysis for Multimedia Interactive Services},
+booktitle={Proceedings of the 14th International Workshop on Image Analysis for Multimedia Interactive Services},
 title={An overview of informed audio source separation},
 year={2013},
 pages={1--4},
@@ -975,7 +975,6 @@ author = {McClellan, James H. and Schafer, Ronald W. and Yoder, Mark A.},
 title={Signal processing first},
 publisher={Pearson Prentice Hall},
 year={2003},
-edition={International},
 }
 
 @article{mdx21,
@@ -1050,7 +1049,7 @@ journal={arXiv preprint arXiv:1806.05791},
 @article{erblet,
   title={The ERBlet transform: an auditory-based time-frequency representation with perfect reconstruction},
   author={Thibaud Necciari and P. Balazs and Nicki Holighaus and Peter L. S{\o}ndergaard},
-  journal={IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+  journal={Proceedings of the IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
   year={2013},
   pages={498--502},
   url={https://ltfat.org/notes/ltfatnote027.pdf}
@@ -1248,7 +1247,7 @@ doi={10.1109/ICASSP.2019.8682991}}
 
 @inproceedings{mlsp2,
 author={Rehr, Robert and Gerkmann, Timo},
-booktitle={Speech Communication; 12. ITG Symposium},
+booktitle={Proceedings of the Speech Communication; 12. ITG Symposium},
 title={A combination of pre-trained approaches and generic methods for an improved speech enhancement},
 year={2016},
 pages={1--5}}
@@ -1446,7 +1445,7 @@ author = {Vincent, Emmanuel and Sawada, Hiroshi and Bofill, Pau and Makino, Shoj
 title = {First stereo audio source separation evaluation campaign: data, algorithms and results},
 year = {2007},
 pages = {552--559},
-booktitle={7th International Conference on Independent Component Analysis and Blind Source Separation (ICA). Lecture Notes in Computer Science},
+booktitle={Proceedings of the 7th International Conference on Independent Component Analysis and Blind Source Separation (ICA). Lecture Notes in Computer Science},
 publisher={Springer},
 volume={4666}
 }
@@ -1569,7 +1568,7 @@ doi = {10.11591/ijece.v11i3.pp2315-2326}
       title={Decoupling Magnitude and Phase Estimation with Deep ResUNet for Music Source Separation}, 
       author={Qiuqiang Kong and Yin Cao and Haohe Liu and Keunwoo Choi and Yuxuan Wang},
       year={2021},
-      booktitle={22nd International Society for Music Information Retrieval Conference},
+      booktitle={Proceedings of the 22nd International Society for Music Information Retrieval Conference},
 }
 @article{demucsplus,
       title={Hybrid Spectrogram and Waveform Source Separation},
