--- a/latex/report.tex
+++ b/latex/report.tex
@@ -36,6 +36,10 @@
 \addbibresource{citations.bib}
 \input{variables.tex}
 
+\DefineBibliographyStrings{english}{%
+    in = {In}
+}
+
 \setcounter{biburllcpenalty}{7000}
 \setcounter{biburlucpenalty}{8000}
 
