Address another issue with citation

--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -1390,7 +1390,7 @@ author = {Tzanetakis, George and Essl, Georg and Cook, Perry},
 year = {2001},
 pages = {318--323},
 title = {Audio analysis using the discrete wavelet transform},
-journal = {Proceedings of the Conference in Acoustics and Music Theory Applications},
+booktitle = {Proceedings of the WSES International Conference Acoustics and Music: Theory and Applications (AMTA 2001)},
 }
 
 @inproceedings{umxorig1,
