--- a/latex/report.tex
+++ b/latex/report.tex
@@ -1,8 +1,9 @@
 \documentclass[letter,12pt,notitlepage]{article}
 \usepackage[svgnames]{xcolor}
+\usepackage{setspace}
 \usepackage{framed}
 \usepackage{subfiles}
-\usepackage[left=4cm, right=2.5cm, top=2.5cm, bottom=2.5cm]{geometry}
+\usepackage[left=1in, right=1in, top=1in, bottom=1in]{geometry}
 \usepackage[shortlabels]{enumitem}
 \usepackage{graphicx}
 \usepackage{svg}
@@ -107,7 +108,8 @@
 \vspace{0.75em}
 \large{April 2022}\\
 \vspace{8em}
-\rule{15cm}{0.1em}
+%\rule{15cm}{0.1em}
+\hrulefill\\
 \small{A thesis submitted to McGill University in partial fulfillment of the requirements of the degree of Master of Arts.}\\
 \vspace{1em}
 \small{\textcopyright\hspace{0.25em}2022 Sevag Hanssian}
@@ -121,6 +123,8 @@
 
 \maketitle
 \thispagestyle{empty}
+
+\onehalfspacing
 
 \newpagefill
 \setcounter{page}{1}
